Improve Prov module (#370)
* Start prov improvements

* Create VtlTypes.java

* Init runWithBindings implementation

* Improve provenance